@@ -1,3 +1,4 @@
+7/16/14 clean up vertical positioning of BalanceScalesNode
 7/16/14 clean up BoxNode and BoxesNode
 7/16/14 clean up BarNode
 7/16/14 clean up FulcrumNode
